# recsys-examples

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.md  CLA.md  HOW_TO_BUILD_AND_RUN_DEMO.md  README.md  docker-bake-211.json  pyproject.toml
corelib/recsys_kvcache_manager/: CMakeLists.txt  EXPORT_KVCACHE_DESIGN.md  README.md  setup.py
corelib/recsys_kvcache_manager/recsys_kvcache_manager/: __init__.py  default_kvcache_backend.py  export_kvcache_backend.py  fake_kvcache_manager_ops.py  flex_kvcache_manager.py  gpu_kvcache_manager.py  hierarchical_kvcache_manager.py  host_kvstorage_manager.py  kvcache_backend.py  kvcache_config.py  kvcache_manager.py  kvcache_metadata.py  kvcache_utils.py  native_host_kvcache_manager.py
corelib/recsys_kvcache_manager/src/: gather_scatter.cpp  gather_scatter.cu  gather_scatter_kernels.cu  gpu_kvcache_manager_impl.cpp  gpu_kvcache_manager_impl.h  native_host_kvcache_manager_impl.cpp  native_host_kvcache_manager_impl.h  pybind.cpp
corelib/recsys_kvcache_manager/src/runtime/: export_kvcache_runtime.cpp  export_kvcache_runtime.h  interface_kvcache_runtime.h
corelib/recsys_kvcache_manager/src/torch_binding/: flexkv_aoti_protocol.cpp  flexkv_aoti_protocol.h  flexkv_cpp_client.cpp  flexkv_cpp_client.h  flexkv_serialization_bridge.cpp  flexkv_serialization_bridge.h  kvcache_manager_context.cpp  kvcache_manager_context.h  kvcache_manager_ops.cpp  kvcache_runtime_context.h
corelib/recsys_kvcache_manager/test/: FLEXKV_CPU_BREAKDOWN.md  bindings_test_config.yml  pytest_flexkv_cpp_client_ops.cpp  test_bindings.py  test_flexkv.py  test_flow.py  test_flow_FlexKV.py  test_full.py  test_kvcache_manager_ops.py  test_native.py
corelib/recsys_kvcache_manager/test/breakdown_1/: plot.py  test_flexkv_profiler.py
corelib/recsys_kvcache_manager/test/offload_stress_test/: offload_stress_test.py
examples/hstu/inference/aoti_demo/: CMakeLists.txt  inference.cpp  inference_e2e.cpp  inference_e2e_pooled.cpp
examples/hstu/inference/nve_init_hook/: CMakeLists.txt  README.md  nve_init_hook.cu
examples/sid-gr-inference/: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
examples/sid-gr-inference/benchmarks/: bench_prefill_attention.py  bench_qwen3_real_weight.py
examples/sid-gr-inference/docs/: gr_inference_customer_intro.html
examples/sid-gr-inference/examples/: run_tiny_gr.py  run_tiny_serving.py
examples/sid-gr-inference/scripts/: bootstrap_container_env.sh  common_paths.sh  quickstart_offline.sh  run_container.sh  run_gr_sglang_beam_compare.sh  run_gr_sglang_bench_serving_beam_benchmark.sh  run_gr_sglang_fair_eval.sh  run_gr_sglang_perf_sweep.sh  run_offline_accuracy_benchmark.sh  run_offline_perf_benchmark.sh  run_sglang_serving_beam_benchmark.sh  run_short_context_nsys_compare.sh  serve_qwen3_gr_http.sh
examples/sid-gr-inference/src/gr_inference/: __init__.py
examples/sid-gr-inference/src/gr_inference/gr_kernels/: __init__.py  backends.py  fused_mlp.py  package_imports.py  profile.py  registry.py  selection.py
examples/sid-gr-inference/src/gr_inference/gr_kernels/attention/: __init__.py  existing_kernel_backend.py  gr_decode_attention.py
examples/sid-gr-inference/src/gr_inference/gr_kv/: __init__.py  batched_beam_path.py  beam_kv.py  beam_path.py  context_kv.py  layouts.py
examples/sid-gr-inference/src/gr_inference/gr_models/: __init__.py  loader.py  resolver.py
examples/sid-gr-inference/src/gr_inference/gr_runtime/: __init__.py  batched_beam_search.py  batched_decode_inputs.py  batched_topk_indices.py  beam_kv_compaction.py  beam_search.py  decode_kv.py  decode_loop.py  engine.py  generation.py  item_constraints.py  logits_processor.py  outputs.py  prefill.py  request.py  timing.py
examples/sid-gr-inference/src/gr_inference/gr_scheduler/: __init__.py  beam_policy.py
examples/sid-gr-inference/src/gr_inference/gr_serving/: __init__.py  api.py  batch.py  beam_metadata.py  cli.py  config.py  continuous.py  cuda_graph_utils.py  decode_batch.py  decode_cuda_graph.py  engine.py  http.py  memory.py  metrics.py  payload.py  prefill_cuda_graph.py  prefix_cache.py  queue.py  request.py  worker.py
examples/sid-gr-inference/src/gr_inference_trtllm_kernels/: __init__.py  qwen3.py
examples/sid-gr-inference/tests/: conftest.py  test_batched_beam_path.py  test_batched_beam_search.py  test_batched_decode_inputs.py  test_batched_topk_indices.py  test_beam_kv_compaction.py  test_beam_path.py  test_beam_policy.py  test_beam_search.py  test_continuous_scheduler.py  test_decode_batch_planner.py  test_decode_kv_writer.py  test_dependency_metadata.py  test_estimate_gr_memory_tool.py  test_fixed_beam_runtime.py  test_fused_mlp_backend.py  test_generation_state.py  test_inspect_qwen3_checkpoint.py  test_item_constraints.py  test_kernel_profile.py  test_kernel_registry.py  test_kv_layout.py  test_logits_processor.py  test_model_loading_contract.py  test_prefill_attention_contract.py  test_qwen3_batched_decode.py  test_qwen3_model_prefill.py  test_qwen3_model_real_decode_smoke.py  test_qwen3_single_layer_prefill.py  test_real_decode_attention_correctness.py  test_real_decode_attention_smoke.py  test_real_weight_tiny_tool.py  test_serving_api.py  test_serving_batch.py  test_serving_engine.py  test_serving_http.py  test_serving_worker.py  test_single_node_v1_checklist_tool.py  test_timing.py  test_tiny_gr_example.py  (+2 more)
examples/sid-gr-inference/tools/: analyze_bytedance_cpu_decode_detail.py  analyze_nsys_gr_sglang.py  check_kernel_backends.py  compare_beam_policies.py  compare_gr_sglang_beam.py  compare_online_generate_outputs.py  estimate_gr_memory.py  inspect_qwen3_checkpoint.py  load_qwen3_checkpoint_smoke.py  make_qwen3_beam_workload.py  run_qwen3_real_weight_serving.py  run_qwen3_real_weight_tiny_gr.py  run_sglang_beam_benchmark.py  run_single_node_v1_checklist.py  score_qwen3_candidates_hf.py  serve_qwen3_gr_http.py  soak_http_serving.py  summarize_gr_sglang_perf_sweep.py  summarize_http_soak.py  summarize_serving_profile.py  sweep_real_weight_serving.py  tool_utils.py
(+470 files in other folders)
