# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sid-gr-inference"
version = "0.1.0"
description = "Qwen-family GR-specialized inference framework MVP"
requires-python = ">=3.10"
dependencies = [
  "huggingface-hub>=0.20",
]

[project.optional-dependencies]
kernels = [
  # Keep GPU kernel packages in a tested set. These packages are tightly
  # coupled through CUTLASS/CuTe and CUDA runtime wheels, so unbounded upgrades
  # can leave users with a successful install but a broken `pip check`.
  "flashinfer-python>=0.6.11,<0.7",
  "cuda-tile>=1.3.0,<1.4",
  "nvidia-cutlass-dsl==4.5.1",
  "nvidia-cutlass-dsl-libs-base==4.5.1",
  "nvidia-cutlass-dsl-libs-cu13==4.5.1",
  "quack-kernels>=0.3.3,<0.5",
  # Runtime dependencies for the gr-decode-attention submodule. Keep these in
  # the top-level project so users never install submodule requirements.
  "apache-tvm-ffi>=0.1.6",
  "torch-c-dlpack-ext",
  # FlashInfer currently allows newer packaging releases, but NVIDIA DALI
  # CUDA 13 images cap packaging at 25.x. This range satisfies both.
  "packaging>=24.2,<=25.0",
]
trtllm-kernels = [
  # TokenSpeed-style standalone TensorRT-LLM CUDA kernels as PyTorch custom ops.
  # Keep this out of the default and [kernels] extras so the core package does
  # not depend on the full TRT-LLM runtime or engine-builder stack.
  "tokenspeed-trtllm-kernel>=1.2.1.post20260427",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
